@startuml
'https://plantuml.com/class-diagram

class App {
void main()
void makeFile()
}

App <--"used in" PersonArray
PersonArray o--"member of" Person

class PersonArray {
Person[] EmployeeRecord
int numEmployees
int longestFName
int longestLName
int longestSalary
int totalLength

int findLongestString()
String formatProperLength()
Person[] readCSV()
}

class Person {
String fname
String lname
int salary
}

@enduml